--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,145 +1,203 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>My Awesome Website</title>
-
-    <!-- attach our stylesheet -->
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-
-<!-- the header -->
-<header>
-
-    <!-- our main logo -->
-    <a id="logo" href="index.html">
-        <img src="img/logo.png" alt="Logo">
-    </a>
-
-    <!-- main navigation links -->
-
-    <nav>
-        <ul>
-            <li><a href="#">Video's</a></li>
-            <li><a href="#">Forum</a></li>
-            <li><a href="#">Over ons</a></li>
-            <li><a href="#">Log in</a></li>
-        </ul>
-    </nav>
-</header>
 
 
-<!-- the content -->
+*     {
+  box-sizing: border-box;
+}
+html,
+body   {
+  margin: 10;
+  padding: 10;
+  line-height: 1.5;
+  font-size: 16px;
+}
 
-<main>
+/* styling our overall page */
+body     {
+  background: #FFF;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-    <div class="hero">
-        <!-- content for the hero -->
+/* styling our header */
+header   {
+  background: #222;
+  color: #FFF;
+  padding: 20px 5px;
+}
 
-        <div class="hero-content">
-            <h1 class="hero-title">STETIM</h1>
-            <p> De BMW Specialist</p>
+/* logo */
+#logo         {
+  display: inline-block;
+  color: #FFF;
+  text-decoration: none;
+  /* 100 */
+  width: 49%;
+}
+#logo img    {
+  width: 150px;
+  border-radius: 3px;
+  margin-right: 8px;
+  vertical-align: middle;
+}
+#logo span   {
+  display: inline-block;
+}
 
-            <a href="#">Over ons</a>
-            <a href="#">Login</a>
-        </div>
-    </div>
+/* main navigation */
+nav     {
+  width: 50%;
+  display: inline-block;
+  text-align: right;
+}
+nav ul   {
+  list-style: none;
+  margin: 0;
+}
+nav ul li {
+  display: inline-block;
+}
+nav ul li a    {
+  font-size: 22px;
+  color: #FFF;
+  text-decoration: none;
+  display: block;
+  padding: 10px 10px;
+  border-radius: 3px;
+  transition: 0.3s ease all;
+}
+nav ul li a:hover   {
+  background: #444;
+}
 
+/* styling our footer */
+footer   {
+  background: #222;
+  color: #777;
+  padding: 40px;
+  text-align: center;
+}
+footer img   {
+  display: block;
+  border-radius: 5px;
+  width: 80px;
+  margin: 0 auto 10px;
+}
 
-    <iframe width="640" height="352" src="https://www.youtube.com/watch?v=fEEifLf5JDM" frameborder="0" allowfullscreen=""></iframe>
+/* styling our main content */
+.hero           {
+  min-height: 800px;
+  text-align: center;
+  background-image: url('../img/homepage.jpg');
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+}
+.hero-content   {
+  color: #FFF;
+  padding-top: 130px;
+}
+.hero-content h1   {
+  font-size: 100px;
+  margin: 0;
+}
+.hero-content p    {
+  font-size: 50px;
+}
+.hero-content a    {
+  display: inline-block;
+  color: #FFF;
+  border: 3px solid #FFF;
+  border-radius: 3px;
+  padding: 15px 30px;
+  margin-right: 20px;
+  text-decoration: none;
+  font-size: 28px;
+}
 
+/* basic site sections */
+.site-section   {
+  padding-bottom: 50px;
+  padding-top: 50px;
+}
+.site-section-secondary   {
+  background: #EFEFEF;
+}
+.site-section-inside   {
+  width: 80%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.section-header {
+  text-align: center;
+  margin-bottom: 30px;
+}
+.section-header h2  {
+  font-size: 30px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-weight: 300;
+  color: #777;
+}
 
-    <!-- features section -->
+/* feature boxes */
+.feature-box   {
+  display: inline-table;
+  width: 33%;
+  padding: 20px 30px;
+}
+.feature-box img  {
+  margin-bottom: 12px;
+  width: 80px;
+}
+.feature-box h5   {
+  font-size: 20px;
+  color: #999;
+  text-transform: uppercase;
+  font-weight: 300;
+  letter-spacing: 2px;
+  margin: 0;
+}
 
-    <div class="site-section">
-        <div class="site-section-inside">
-            <div class="section-header">
-                <h2>Key Features</h2>
-            </div>
-            <div class="feature-box">
-                <img src="img/like.png" alt="Easy to Use">
-                <h5>Easy to Use</h5>
-                <p>Just think of how easy this is to use. Toddlers can do it. So can you!</p>
-            </div>
+/* testimonial boxes */
+.testimonial-box   {
+  display: inline-table;
+  width: 33%;
+  padding: 20px 30px;
+}
+.testimonial-content   {
+  background: #FFF;
+  padding: 15px;
+  border-radius: 4px;
+  margin-bottom: 15px;
+}
+.testimonial-author           {
 
-            <div class="feature-box">
-                <img src="img/faces.png" alt="Fun to Use">
-                <h5>Fun to Use</h5>
-                <p>Just think of how easy this is to use. Toddlers can do it. So can you!</p>
-            </div>
+}
+.testimonial-author img {
+  float: left;
+  width: 80px;
+  border-radius: 50%;
+  margin-right: 15px;
+  vertical-align: middle;
+}
+.testimonial-author h5   {
+  font-size: 18px;
+  margin: 0;
+  padding-top:15px;
+}
+.testimonial-author span {
+  font-size: 14px;
+}
+.video-container {
+  position:relative;
+  padding-bottom:50%;
+  padding-top:30px;
+  height:0;
+  overflow:hidden;
+}
 
-
-            <div class="feature-box">
-                <img src="img/heart.png" alt="Fun to Use">
-                <h5>You'll Love</h5>
-                <p>Just think of how easy this is to use. Toddlers can do it. So can you!</p>
-            </div>
-        </div>
-    </div>
-
-
-    <!-- testimonials section -->
-
-    <div class="site-section site-section-secondary">
-        <div class="site-section-inside">
-            <div class="section-header">
-                <h2>What the people say</h2>
-            </div>
-
-
-            <div class="testimonial-box">
-                <div class="testimonial-content">
-                    Their service is by far the most influential I've ever seen.
-
-                </div>
-
-                <div class="testimonial-author">
-                    <img src="img/david.jpg" alt="David East">
-                    <h5>David East</h5>
-                    <span>King of Firebase</span>
-                </div>
-            </div>
-
-            <div class="testimonial-box">
-                <div class="testimonial-content">
-                    Their service is by far the most influential I've ever seen.
-                </div>
-                <div class="testimonial-author">
-                    <img src="img/holly.jpg" alt="Holly Lloyd">
-                    <h5>Holly Lloyd</h5>
-                    <span>Queen of Scotch</span>
-                </div>
-            </div>
-
-
-            <div class="testimonial-box">
-                <div class="testimonial-content">
-                    Their service is by far the most influential I've ever seen.
-                </div>
-                <div class="testimonial-author">
-                    <img src="img/brad.jpg" alt="Brad Green">
-                    <h5>Brad Green</h5>
-                    <span>King of Angular</span>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-</main>
-
-
-<!-- the footer -->
-
-<footer>
-
-    <img src="img/avatar.jpeg" alt="Footer Logo">
-
-    <span>My Website<br>Copyright &copy; 2016-3010 </span>
-
-</footer>
-
-
-</body>
-
-</html>
+.video-container iframe, .video-container object, .video-container embed {
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+}
