--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,26 +5,24 @@
 }
 html,
 body   {
-  margin: 10;
-  padding: 10;
+  margin:0;
+  padding: 0;
   line-height: 1.5;
   font-size: 16px;
 }
 
-/* styling our overall page */
 body     {
   background: #FFF;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* styling our header */
 header   {
   background: #222;
   color: #FFF;
   padding: 20px 5px;
 }
 
-/* logo */
+
 #logo         {
   display: inline-block;
   color: #FFF;
@@ -42,7 +40,6 @@ header   {
   display: inline-block;
 }
 
-/* main navigation */
 nav     {
   width: 50%;
   display: inline-block;
@@ -55,11 +52,11 @@ nav ul   {
 nav ul li {
   display: inline-block;
 }
-nav ul li a    {
+nav ul li a button  {
   font-size: 22px;
   color: #FFF;
+  background-color: #222;
   text-decoration: none;
-  display: block;
   padding: 10px 10px;
   border-radius: 3px;
   transition: 0.3s ease all;
@@ -68,7 +65,6 @@ nav ul li a:hover   {
   background: #444;
 }
 
-/* styling our footer */
 footer   {
   background: #222;
   color: #777;
@@ -82,27 +78,30 @@ footer img   {
   margin: 0 auto 10px;
 }
 
-/* styling our main content */
-.hero           {
-  min-height: 1270;
+.hoofdpagina           {
+  min-height: 1000px;
+  position: relative;
+  background: url('../img/homepage.jpg') 50% 0 no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   text-align: center;
-  background-image: url('../img/homepage.jpg');
-  background-size: 100% auto;
-  background-repeat: no-repeat;
+
 }
-.hero-content   {
+.hoofdpagina-content   {
   color: #FFF;
   padding-top: 130px;
 }
-.hero-content h1   {
+.hoofdpagina-content h1   {
   font-size: 100px;
   margin: 0;
 }
-.hero-content p    {
+.hoofdpagina-content p    {
   font-size: 50px;
 }
-.hero-content a    {
-  display: inline-block;
+.hoofdpagina-content a    {
+
   color: #FFF;
   border: 3px solid #FFF;
   border-radius: 3px;
@@ -186,18 +185,22 @@ footer img   {
 .testimonial-author span {
   font-size: 14px;
 }
-.video-container {
-  position:relative;
-  padding-bottom:50%;
-  padding-top:30px;
-  height:0;
+
+.featured-videos {
+  width: 100%;
+  height: 300px;
   overflow:hidden;
+  position: relative;
+  border: 0px;
 }
 
-.video-container iframe, .video-container object, .video-container embed {
-  position:absolute;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
+.forumpagina {
+  min-height: 1000px;
+  position: relative;
+  background: url('../img/forumpagina.jpg') 50% 0 no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  text-align: center;
 }
