--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -32,8 +32,8 @@ header   {
 }
 #logo img    {
   width: 150px;
-  border-radius: 3px;
-  margin-right: 8px;
+  border-radius: 10px;
+  margin-left: 30px;
   vertical-align: middle;
 }
 #logo span   {
@@ -44,6 +44,7 @@ nav     {
   width: 50%;
   display: inline-block;
   text-align: right;
+
 }
 nav ul   {
   list-style: none;
@@ -58,7 +59,7 @@ nav ul li a button  {
   background-color: #222;
   text-decoration: none;
   padding: 10px 10px;
-  border-radius: 3px;
+  border-radius: 20 px;
   transition: 0.3s ease all;
 }
 nav ul li a:hover   {
@@ -203,4 +204,100 @@ footer img   {
   -o-background-size: cover;
   background-size: cover;
   text-align: center;
+}
+
+
+
+.loginpagina{
+  min-height: 1000px;
+  position: relative;
+  background: url('../img/loginpagina.jpg') 50% 0 no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  text-align: center;
+
+}
+
+
+.login-box {
+  width: 320px;
+  height: 420px;
+  background: #000;
+  color: #fff;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  box-sizing: border-box;
+  padding: 70px 30px;
+}
+
+.login-box .avatar {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  position: absolute;
+  top: -50px;
+  left: calc(50% - 50px);
+}
+.avatar{
+  top: +50px;
+}
+
+.login-box h1 {
+  margin: 0;
+  padding: 0 0 20px;
+  text-align: center;
+  font-size: 22px;
+}
+
+.login-box label {
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+  display: block;
+}
+
+.login-box input {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.login-box input[type="text"], .login-box input[type="password"] {
+  border: none;
+  border-bottom: 1px solid #fff;
+  background: transparent;
+  outline: none;
+  height: 40px;
+  color: #fff;
+  font-size: 16px;
+}
+
+.login-box input[type="submit"] {
+  border: none;
+  outline: none;
+  height: 40px;
+  background: #b80f22;
+  color: #fff;
+  font-size: 18px;
+  border-radius: 20px;
+}
+
+.login-box input[type="submit"]:hover {
+  cursor: pointer;
+  background: #ffc107;
+  color: #000;
+}
+
+.login-box a {
+  text-decoration: none;
+  font-size: 12px;
+  line-height: 20px;
+  color: darkgrey;
+}
+
+.login-box a:hover {
+  color: #fff;
 }
